<resources>
    <!-- Others -->
    <string name="app_name">面膜时间</string>

    <string name="main_community">发现</string>
    <string name="main_record">日记</string>
    <string name="main_album">心得</string>
    <string name="main_setting">设置</string>

    <string name="community">交流</string>
    <string name="read">阅读</string>

    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>

    <string name="label_my_skincare">我的护肤品</string>
    <string name="label_quick_setting_time">点击快速设置倒计时</string>

    <string name="setting_login">登陆</string>
    <string name="setting_plan">美丽计划</string>
    <string name="setting_sound">提醒声音</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_favorable">赏个好评</string>
    <string name="setting_share">要求好友</string>

    <string name="setting_music_bird">空山鸟语</string>
    <string name="setting_music_pkq">超萌皮卡丘</string>
    <string name="setting_music_dream">回梦游仙</string>
    <string name="setting_music_xqx">雪千寻</string>


    <!-- LoginActivity -->
    <string name="title_activity_login">登陆</string>
    <string name="prompt_account">账号</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="action_sign_in_quick">快速注册</string>

    <string name="error_invalid_account">账号错误</string>
    <string name="error_invalid_email">邮箱错误</string>
    <string name="error_invalid_password">密码错误</string>
    <string name="error_incorrect_password">密码错误</string>
    <!--    <string name="error_field_required">This field is required</string>-->

    <!-- RegisterActivity -->
    <string name="title_activity_register">注册</string>
    <string name="action_register">注册</string>

    <!-- RecordingActivity -->
    <string name="title_activity_recording">记录</string>
    <string name="prompt_record_title">快来为你的心得取一个名字吧</string>
    <string name="prompt_record_note">快来记录你的心得体会吧</string>
    <string name="action_submit">提交</string>
    <string name="label_group_num">共%s日记</string>

    <string name="error_invalid_title">心得标题为空</string>
    <string name="error_invalid_content">心得内容为空</string>

    <string name="label_ra_title_defaut">今天做了一个面膜，美哒哒</string>
    <string name="label_ra_content_defaut">她很懒，什么都没有留下</string>

</resources>
