<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/android_margin_middle"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_medium" />

        <include
            layout="@layout/online_music_contrl"
            android:layout_width="@dimen/size35"
            android:layout_height="@dimen/size35"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/android_margin_normal" />

        <!--        <include
                    layout="@layout/main_seekbar_contrl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true" />-->

        <include
            layout="@layout/main_time_contrl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/ma_note_bg"
        android:orientation="vertical"
        android:padding="@dimen/android_padding_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/label_my_skincare"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/label_quick_setting_time"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/ma_tab_bg"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_community"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="@dimen/android_padding_normal"
            android:drawableTop="@drawable/selector_btn_community"
            android:gravity="center"
            android:text="@string/main_community"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txt_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="@dimen/android_padding_normal"
            android:drawableTop="@drawable/selector_btn_store"
            android:gravity="center"
            android:text="@string/main_album"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txt_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="@dimen/android_padding_normal"
            android:drawableTop="@drawable/selector_btn_record"
            android:gravity="center"
            android:text="@string/main_record"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txt_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="@dimen/android_padding_normal"
            android:drawableTop="@drawable/selector_btn_setting"
            android:gravity="center"
            android:text="@string/main_setting"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>